update footer icon

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -61,7 +61,7 @@
             class="icons-list-link youtube"
           >
             <svg class="icons-svg">
-              <use href="/img/svg/icons.svg#icon-youtube"></use>
+              <use href="../img/svg/icons.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
