--- a/src/css/assortment.css
+++ b/src/css/assortment.css
@@ -38,12 +38,11 @@
 }
 
 .assortment-sub {
-    font-family: "Fira", sans-serif;
+    font-family: 'Fira sans', sans-serif;
     font-weight: 600;
     font-size: 18px;
     line-height: 160%;
     letter-spacing: 0;
-    padding-bottom: 8px;
 }
 
 .assortment-p {
