--- a/src/css/feedbacks.css
+++ b/src/css/feedbacks.css
@@ -14,5 +14,98 @@
     .container {
     max-width: 1440px;
     padding: 0 15px;
+    font-family: 'Comfortaa', sans-serif;
     }
+}
+
+.reviews-titel{
+color: #030a06;
+letter-spacing: 0.01em;
+text-align: center;
+font-weight: 700;
+font-size: 36px;
+font-family: 'Comfortaa',
+    sans-serif;
+padding: 32px 0;
+}
+@media screen and (min-width:1440px){
+.reviews-titel{
+font-size: 48px;
+max-width: 562px;
+margin: 0 auto;
+}
+}
+.reviews-list{
+display: flex;
+flex-wrap: wrap;
+gap: 40px;
+justify-content: center;
+}
+@media screen and (min-width:768px){
+    .reviews-list{
+    gap: 32px 24px
+    }
+}
+@media screen and (min-width:1440px){
+    .reviews-list{
+flex-direction: row;
+flex-wrap: nowrap;
+gap: 24px
+    }
+}
+
+.reviews-list-item{
+    width: 288px;
+    height: 158px;
+     min-width: 280px;
+}
+
+@media screen and (min-width:768px) {
+    .reviews-list-item {
+     width: 340px;
+     height: 182px;
+    min-width: 280px;
+        }
+}
+@media screen and (min-width:1440px) {
+    .reviews-list-item {
+        width: 310px;
+        height: 182px;
+    }
+}
+.stars-list{
+display: flex;
+align-items: center;
+
+gap: 4px;
+padding-bottom: 12px;
+fill: #3ac04c;
+
+}
+@media screen and (min-width:768px){
+    .stars-list{
+    padding-bottom: 24px;
+    }
+}
+.stars-list-item{
+justify-content: center;
+width: 24px;
+height: 24px;
+
+}
+.reviews-list-item-text{
+color: #030a06;
+letter-spacing: 0.01em;
+font-weight: 500;
+font-size: 20px;
+ line-height: 1.4;
+font-family: "Comfortaa", sans-serif; ;
+padding-bottom: 12px;
+}
+.reviews-list-item-name{
+color: #030a06;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.6;
+font-family: "Fira Sans", sans-serif;
 }
