--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
   <div class="container footer-content">
     <div class="footer-logo">
       <a href="./index.html">
-        <img src="/img/logo.svg" width="280" alt="logo EcoTote" />
+        <img src="/img/logo.svg" width="272" height="101" alt="logo EcoTote" />
       </a>
     </div>
     <div class="footer-column">
@@ -33,30 +33,35 @@
     <div class="menu-icons">
       <ul class="icons-list">
         <li class="icons-item">
-          <a href="https://www.instagram.com/" class="mobile-list-link">
-            <svg class="icons-svg" width="32" height="32">
-              <use
-                href="/img/svg/icons.svg#icon-instagram"
-                target="blank"
-              ></use>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            class="icons-list-link"
+          >
+            <svg class="icons-svg">
+              <use href="/img/svg/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="icons-item">
-          <a href="https://www.linkedin.com/" class="mobile-list-link">
-            <svg class="icons-svg" width="32" height="32">
-              <use href="/img/svg/icons.svg#icon-linkedin" target="blank"></use>
+          <a
+            href="https://www.linkedin.com/"
+            target="_blank"
+            class="icons-list-link"
+          >
+            <svg class="icons-svg">
+              <use href="/img/svg/icons.svg#icon-linkedin"></use>
             </svg>
           </a>
         </li>
         <li class="icons-item">
           <a
             href="https://www.youtube.com/"
-            class="mobile-list-link"
-            target="blank"
+            target="_blank"
+            class="icons-list-link youtube"
           >
-            <svg class="icons-svg" width="32" height="32">
-              <use href="../img/svg/icons.svg#icon-youtube"></use>
+            <svg class="icons-svg">
+              <use href="/img/svg/icons.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
