--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./about.css');
+@import url('./advantages.css');
 @import url('./assortment.css');
 @import url('./gallery.css');
 @import url('./feedbacks.css');
@@ -15,5 +16,6 @@
 @import url('./footer.css');
 @import url('./reset.css');
 @import url('./container.css');
+
 
 
