--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="section-advantages">
+<section class="section-advantages" id="advantages">
   <div class="container container-advantages">
     <h3 class="subtitle">Переваги</h3>
     <h2 class="title-advantages">Чому обрати нас?</h2>
@@ -25,7 +25,7 @@
             "
           />
           <source
-            media="(min-width: 320px)"
+            media="(max-width: 767px)"
             srcset="
               ./img/advantages/organic-m.jpg   1x,
               ./img/advantages/organic-m@2.jpg 2x
@@ -39,6 +39,7 @@
             height="198"
           />
         </picture>
+
         <h4 class="subtitle-advantages">Стійкість та екологічність</h4>
         <p class="subtitle-advantages-text">
           Виготовлені з органічної бавовни та переробленого пластику.
@@ -61,7 +62,7 @@
             "
           />
           <source
-            media="(min-width: 320px)"
+            media="(max-width: 767px)"
             srcset="
               ./img/advantages/strength-m.jpg   1x,
               ./img/advantages/strength-m@2.jpg 2x
@@ -75,6 +76,7 @@
             height="198"
           />
         </picture>
+
         <h4 class="subtitle-advantages">Міцність і довговічність</h4>
         <p class="subtitle-advantages-text">
           Наші сумки мають посилені шви для тривалого використання.
@@ -97,7 +99,7 @@
             "
           />
           <source
-            media="(min-width: 320px)"
+            media="(max-width: 767px)"
             srcset="
               ./img/advantages/modern-style-m.jpg   1x,
               ./img/advantages/modern-style-m@2.jpg 2x
@@ -111,6 +113,7 @@
             height="198"
           />
         </picture>
+
         <h4 class="subtitle-advantages">Стильний та сучасний дизайн</h4>
         <p class="subtitle-advantages-text">
           Мінімалістичні моделі в обмежених серіях для кожного стилю.
