--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -1,6 +1,7 @@
 <!--Анна-->
-<section class="reviews">
+<section class="reviews" id="reviews">
   <div class="container">
+    <h1 class="reviews-titel">Що говорять наші клієнти</h1>
     <ul class="reviews-list">
       <li class="reviews-list-item">
         <ul class="stars-list">
@@ -30,8 +31,10 @@
             </svg>
           </li>
         </ul>
-        <p>Сумка дуже зручна та стильна, використовую щодня!</p>
-        <p>Aнна</p>
+        <p class="reviews-list-item-text">
+          Сумка дуже зручна та стильна, використовую щодня!
+        </p>
+        <p class="reviews-list-item-name">Aнна</p>
       </li>
       <li class="reviews-list-item">
         <ul class="stars-list">
@@ -61,8 +64,10 @@
             </svg>
           </li>
         </ul>
-        <p>Відмінна якість матеріалів, приємно здивована.</p>
-        <p>Ігор</p>
+        <p class="reviews-list-item-text">
+          Відмінна якість матеріалів, приємно здивована.
+        </p>
+        <p class="reviews-list-item-name">Ігор</p>
       </li>
       <li class="reviews-list-item">
         <ul class="stars-list">
@@ -92,8 +97,10 @@
             </svg>
           </li>
         </ul>
-        <p>Сумка повністю відповідає опису, рекомендую!</p>
-        <p>Олена</p>
+        <p class="reviews-list-item-text">
+          Сумка повністю відповідає опису, рекомендую!
+        </p>
+        <p class="reviews-list-item-name">Олена</p>
       </li>
       <li class="reviews-list-item">
         <ul class="stars-list">
@@ -123,8 +130,10 @@
             </svg>
           </li>
         </ul>
-        <p>Швидка доставка та гарне обслуговування.</p>
-        <p>Сергій</p>
+        <p class="reviews-list-item-text">
+          Швидка доставка та гарне обслуговування.
+        </p>
+        <p class="reviews-list-item-name">Сергій</p>
       </li>
     </ul>
   </div>
