--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -69,7 +69,7 @@
             "
           />
           <img
-            class="advantages-picture"
+            class="advantages-picture strenght"
             src="./img/advantages/strength-m"
             alt="hands of a craftsman working on creating a bag"
             width="288"
