--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,7 +3,7 @@
     <h2 class="gallery-title">Галерея зображень</h2>
     <p class="gallery-text">EcoTotes у повсякденному житті</p>
     <ul class="gallery-list">
-      <li class="gallery-item">
+      <li class="gallery-item item-1">
         <picture class="gallery-item-picture">
           <source
             media="(min-width: 768px)"
@@ -20,18 +20,17 @@
             "
           />
           <img
+            class="list-item-photo-1"
             src="../img/eco-tote-mobile.jpg"
             srcset="
               ../img/eco-tote-mobile.jpg    1x,
               ../img/eco-tote-mobile@x2.jpg 2x
             "
-            width="288"
-            height="288"
             alt="Екологічна сумка EcoTotes"
           />
         </picture>
       </li>
-      <li class="gallery-item">
+      <li class="gallery-item item-2">
         <picture class="gallery-item-picture">
           <source
             media="(min-width: 768px)"
@@ -48,18 +47,17 @@
             "
           />
           <img
+            class="list-item-photo-2"
             src="../img/city-scene-mobile.jpg"
             srcset="
               ../img/city-scene-mobile.jpg    1x,
               ../img/city-scene-mobile@x2.jpg 2x
             "
-            width="288"
-            height="288"
             alt="city-scene"
           />
         </picture>
       </li>
-      <li class="gallery-item">
+      <li class="gallery-item item-3">
         <picture class="gallery-item-picture">
           <source
             media="(min-width: 768px)"
@@ -73,15 +71,14 @@
             "
           />
           <img
+            class="list-item-photo-3"
             src="../img/walker-mobile.jpg"
             srcset="../img/walker-mobile.jpg 1x, ../img/walker-mobile@x2.jpg 2x"
-            width="288"
-            height="288"
             alt="walker with EcoTotes bag"
           />
         </picture>
       </li>
-      <li class="gallery-item">
+      <li class="gallery-item item-4">
         <picture class="gallery-item-picture">
           <source
             media="(min-width: 768px)"
@@ -98,13 +95,12 @@
             "
           />
           <img
+            class="list-item-photo-4"
             src="../img/young-woman-mobile.jpg"
             srcset="
               ../img/young-woman-mobile.jpg    1x,
               ../img/young-woman-mobile@x2.jpg 2x
             "
-            width="288"
-            height="288"
             alt="young-woman with EcoTotes bag"
           />
         </picture>
