--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,7 @@
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./assortment.css');
-@import url('./pictures.css');
+@import url('./gallery.css');
 @import url('./reviews.css');
 @import url('./feedback.css');
 @import url('./footer.css');
