--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,7 +3,7 @@
     <h2 class="gallery-title">Галерея зображень</h2>
     <p class="gallery-text">EcoTotes у повсякденному житті</p>
     <ul class="gallery-list">
-      <li class="gallery-item">
+      <li class="gallery-item gallery-item--1">
         <picture class="gallery-item-picture">
           <source
             media="(min-width: 768px)"
@@ -25,13 +25,11 @@
               ../img/eco-tote-mobile.jpg    1x,
               ../img/eco-tote-mobile@x2.jpg 2x
             "
-            width="288"
-            height="288"
             alt="Екологічна сумка EcoTotes"
           />
         </picture>
       </li>
-      <li class="gallery-item">
+      <li class="gallery-item gallery-item--2">
         <picture class="gallery-item-picture">
           <source
             media="(min-width: 768px)"
@@ -53,13 +51,11 @@
               ../img/city-scene-mobile.jpg    1x,
               ../img/city-scene-mobile@x2.jpg 2x
             "
-            width="288"
-            height="288"
             alt="city-scene"
           />
         </picture>
       </li>
-      <li class="gallery-item">
+      <li class="gallery-item gallery-item--3">
         <picture class="gallery-item-picture">
           <source
             media="(min-width: 768px)"
@@ -75,13 +71,11 @@
           <img
             src="../img/walker-mobile.jpg"
             srcset="../img/walker-mobile.jpg 1x, ../img/walker-mobile@x2.jpg 2x"
-            width="288"
-            height="288"
             alt="walker with EcoTotes bag"
           />
         </picture>
       </li>
-      <li class="gallery-item">
+      <li class="gallery-item gallery-item--4">
         <picture class="gallery-item-picture">
           <source
             media="(min-width: 768px)"
@@ -103,8 +97,6 @@
               ../img/young-woman-mobile.jpg    1x,
               ../img/young-woman-mobile@x2.jpg 2x
             "
-            width="288"
-            height="288"
             alt="young-woman with EcoTotes bag"
           />
         </picture>
