--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -80,7 +80,7 @@
               ../img/gallery/walker-m.jpg    1x,
               ../img/gallery/walker-m@2x.jpg 2x
             "
-            alt="walker with EcoTotes bag"
+            alt="walker with EcoTotes"
           />
         </picture>
       </li>
