--- a/src/partials/assortment.html
+++ b/src/partials/assortment.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="assortment-div">
                     <h3 class="assortment-sub">EcoTote Shopper</h3>
-                    <p class="assortment-p">Ідеальна для покупок, з посиленими ручками.</p>
+                    <p class="assortment-p">Ідеальна для покупок, з <br>посиленими ручками.</p>
                     <p class="assortment-price">$30</p>
                 </div>
                 <button type="button" class="assortment-button">Купити</button>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="assortment-div">
                     <h3 class="assortment-sub">EcoBackpack Urban</h3>
-                    <p class="assortment-p">Зручний рюкзак для міста з відділенням для ноутбука.</p>
+                    <p class="assortment-p">Зручний рюкзак для міста з відділенням <br>для ноутбука.</p>
                     <p class="assortment-price">$45</p>
                 </div>
                 <button type="button" class="assortment-button">Купити</button>
