--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -47,7 +47,7 @@
               maxlength="500"
             ></textarea>
           </div>
-          <button class="btn btn-submit" type="submit">Ніслати</button>
+          <button class="btn btn-submit" type="submit">Надіслати</button>
         </form>
       </div>
 
