--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -7,27 +7,27 @@
         <ul class="stars-list">
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
         </ul>
@@ -40,27 +40,27 @@
         <ul class="stars-list">
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
         </ul>
@@ -73,27 +73,27 @@
         <ul class="stars-list">
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
         </ul>
@@ -106,27 +106,27 @@
         <ul class="stars-list">
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star"></use>
             </svg>
           </li>
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
-              <use href="../img/svg/icons.svg#icon-rating-star-2"></use>
+              <use href="/img/svg/icons.svg#icon-rating-star-2"></use>
             </svg>
           </li>
         </ul>
