--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -29,10 +29,10 @@
               /img/city-scene-desktop.jpg    1x,
               /img/city-scene-desktop@x2.jpg 2x
             " />
-          <img src="/img/city-scene-mobile.jpg" srcset="
+          <img src="/src/img/city-scene-mobile.jpg" srcset="
               /img/city-scene-mobile.jpg    1x,
               /img/city-scene-mobile@x2.jpg 2x
-            " width="288" height="288" alt="city-scene" />
+            " width="288" height="288" alt="city-scene"/>
         </picture>
       </li>
       <li class="gallery-item">
