--- a/src/css/feedbacks.css
+++ b/src/css/feedbacks.css
@@ -20,7 +20,7 @@
     }
 }
 
-.reviews-titel {
+.feedbacks-titel {
     color: #030a06;
     letter-spacing: 0.01em;
     text-align: center;
@@ -32,50 +32,55 @@
 }
 
 @media screen and (min-width:1440px) {
-    .reviews-titel {
+    .feedbacks-titel {
         font-size: 48px;
         max-width: 562px;
         margin: 0 auto;
+        padding-bottom: 80px;
+        padding-top: 64px;
     }
 }
 
-.reviews-list {
+.feedbacks-list {
     display: flex;
     flex-wrap: wrap;
     gap: 40px;
     justify-content: center;
+    padding-bottom: 32px;
 }
 
 @media screen and (min-width:768px) {
-    .reviews-list {
+    .feedbacks-list {
         gap: 32px 24px
     }
 }
 
 @media screen and (min-width:1440px) {
-    .reviews-list {
+    .feedbacks-list {
         flex-direction: row;
         flex-wrap: nowrap;
-        gap: 24px
+        gap: 24px;
+        padding-bottom: 64px;
     }
 }
 
-.reviews-list-item {
+.feedbacks-list-item {
     width: 288px;
     height: 158px;
     min-width: 280px;
 }
 
 @media screen and (min-width:768px) {
-    .reviews-list-item {
+    .feedbacks-list-item {
         width: 340px;
         height: 182px;
         min-width: 280px;
+        
     }
 }
 
 @media screen and (min-width:1440px) {
-    .reviews-list-item {
+    .feedbacks-list-item {
         width: 310px;
         height: 182px;
     }
@@ -104,7 +109,7 @@
 
 }
 
-.reviews-list-item-text {
+.feedbacks-list-item-text {
     color: #030a06;
     letter-spacing: 0.01em;
     font-weight: 500;
@@ -115,7 +120,7 @@
     padding-bottom: 12px;
 }
 
-.reviews-list-item-name {
+.feedbacks-list-item-name {
     color: #030a06;
     font-weight: 700;
     font-size: 16px;
