--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -1,9 +1,9 @@
 <!--Анна-->
-<section class="reviews" id="reviews">
+<section class="feedbacks" id="feedbacks">
   <div class="container">
-    <h1 class="reviews-titel">Що говорять наші клієнти</h1>
-    <ul class="reviews-list">
-      <li class="reviews-list-item">
+    <h1 class="feedbacks-titel">Що говорять наші клієнти</h1>
+    <ul class="feedbacks-list">
+      <li class="feedbacks-list-item">
         <ul class="stars-list">
           <li class="stars-list-item">
             <svg class="stars-list-item-icon" width="24" height="24">
@@ -31,10 +31,10 @@
             </svg>
           </li>
         </ul>
-        <p class="reviews-list-item-text">
+        <p class="feedbacks-list-item-text">
           Сумка дуже зручна та стильна, використовую щодня!
         </p>
-        <p class="reviews-list-item-name">Aнна</p>
+        <p class="feedbacks-list-item-name">Aнна</p>
       </li>
       <li class="feedbacks-list-item">
         <ul class="stars-list">
@@ -64,10 +64,10 @@
             </svg>
           </li>
         </ul>
-        <p class="reviews-list-item-text">
+        <p class="feedbacks-list-item-text">
           Відмінна якість матеріалів, приємно здивована.
         </p>
-        <p class="reviews-list-item-name">Ігор</p>
+        <p class="feedbacks-list-item-name">Ігор</p>
       </li>
       <li class="feedbacks-list-item">
         <ul class="stars-list">
@@ -97,10 +97,10 @@
             </svg>
           </li>
         </ul>
-        <p class="reviews-list-item-text">
+        <p class="feedbacks-list-item-text">
           Сумка повністю відповідає опису, рекомендую!
         </p>
-        <p class="reviews-list-item-name">Олена</p>
+        <p class="feedbacks-list-item-name">Олена</p>
       </li>
       <li class="feedbacks-list-item">
         <ul class="stars-list">
@@ -130,10 +130,10 @@
             </svg>
           </li>
         </ul>
-        <p class="reviews-list-item-text">
+        <p class="feedbacks-list-item-text">
           Швидка доставка та гарне обслуговування.
         </p>
-        <p class="reviews-list-item-name">Сергій</p>
+        <p class="feedbacks-list-item-name">Сергій</p>
       </li>
     </ul>
   </div>
