--- a/src/css/assortment.css
+++ b/src/css/assortment.css
@@ -6,12 +6,10 @@
     text-align: center;
     padding: 32px 16px;
     font-family: "Comfortaa", sans-serif;
-
 }
 
 .assortment {
-
-    gap: 48px;
+    padding: 64px 0;
 }
 
 .assortment-ul {
@@ -19,31 +17,31 @@
     flex-wrap: wrap;
     gap: 40px;
     justify-content: center;
+    font-family: 'Fira sans', sans-serif;
 }
 
 .assortment-li {
     width: 288px;
     min-width: 200px;
     text-align: center;
+    margin: 0 auto;
 }
 
 .assortment img {
     border-radius: 32px;
-
 }
 
 .assortment-div {
     width: 288px;
-    padding: 16px 0;
-
+    margin: 16px 0;
 }
 
 .assortment-sub {
+    font-family: 'Fira sans', sans-serif;
     font-weight: 600;
     font-size: 18px;
     line-height: 160%;
     letter-spacing: 0;
-    padding-bottom: 8px;
 }
 
 .assortment-p {
@@ -59,120 +57,89 @@
     line-height: 160%;
     letter-spacing: 0;
     padding-top: 8px;
-    padding-bottom: 16px;
 }
 
-/* #region four */
-
-.sect-four {
-    padding: 96px 0;
+.assortment-button {
+    display: block;
+    margin: 0 auto;
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 160%;
+    letter-spacing: 0;
+    border-radius: 6px;
+    height: 40px;
+    align-items: center;
+    width: 288px;
+    min-width: 288px;
+    cursor: pointer;
+    border: 1px solid #030A06;
+    background-color: transparent;
 }
-
-.sect-four-ul {}
-
-
-
-.sect-four-img {
-    position: relative;
-    overflow: hidden;
-}
-
-.sect-four-img img {
-    width: 100%;
-    height: auto;
-}
-
-.sect-four-p-hidden {
-    display: none;
-}
-
-
 
 @media screen and (min-width: 768px) {
-    .sect-four-div {
-        width: 360px;
-        height: 120px;
-        padding: 32px 16px;
-        border: 0px solid #e7e9fc;
-        border-top: none;
-    }
-}
-
-.sect-four-sub {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 120%;
-    letter-spacing: 0.02em;
-    color: var(--navy-blue);
-    padding-bottom: 8px;
-}
-
-@media (min-width: 768px) {
-    .sect-four-li {
-        width: 356px;
+    .container {
+        width: 768px;
     }
 
-    .sect-four-ul {
-        gap: 72px 24px;
+    .assortment-ul {
+        gap: 48px 24px;
         justify-content: center;
     }
-}
 
-@media (min-width: 1158px) {
-
-    .sect-four {
-        padding: 120px 0;
+    .assortment-li {
+        width: 340px;
     }
 
-    .sect-four-ul {
-        width: 1128px;
-        margin: 0 auto;
-        gap: 48px 24px;
+    .assortment-div {
+        width: 340px;
+        margin: 16px 0;
+        height: 113px;
     }
 
-    .sect-four-li {
-        width: 360px;
-        height: 420px;
-        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .assortment img {
+        border-radius: 32px;
+        width: 340px;
     }
 
-    .sect-four-img {
-        width: 360px;
-        height: 300px;
-        overflow: hidden;
-        position: relative;
-    }
-
-    .sect-four-p-hidden {
-        display: block;
-        position: absolute;
-        inset: 0;
-        background: #4d5ae5;
-        color: #f4f4fd;
-        font-size: 16px;
-        line-height: 1.5;
-        padding: 40px 32px;
-        transform: translateY(100%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    .sect-four-li:hover .sect-four-p-hidden {
-        transform: translateY(0%);
-    }
-
-    .sect-four-li:hover {
-        box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-            0px 1px 1px rgba(46, 47, 66, 0.16),
-            0px 2px 1px rgba(46, 47, 66, 0.08);
-    }
-
-    .sect-four-div {
-        width: 360px;
-        height: 120px;
-        padding: 32px 16px;
-        border: 1px solid #e7e9fc;
-        border-top: none;
+    .assortment-button {
+        width: 340px;
     }
 }
 
-/* #endregion sect-four */
+@media screen and (min-width: 1440px) {
+
+    .assortment-title {
+        font-weight: 700;
+        font-size: 48px;
+        line-height: 120%;
+        letter-spacing: 0.01em;
+        text-align: center;
+        padding: 0 0 32px 0;
+        font-family: "Comfortaa", sans-serif;
+    }
+
+    .assortment-ul {
+        gap: 64px 24px;
+        justify-content: center;
+    }
+
+    .assortment-li {
+        width: 310px;
+    }
+
+    .assortment-div {
+        width: 310px;
+        margin: 16px 0;
+        height: 113px;
+    }
+
+    .assortment img {
+        border-radius: 32px;
+        width: 310px;
+    }
+
+    .assortment-button {
+        width: 310px;
+    }
+}
