--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,1 +1,8 @@
 <!--Людмила-->
+<section class="about-section" id="about">
+    <div class="container about-container">
+     <h1 class="about-title">Природність</h1>
+     <h2 class="about-subtitle">Турбота про планету</h2>
+     <p class="about-text">Ми використовуємо органічну бавовну, перероблений пластик, льон та коноплі для наших сумок.</p>
+    </div>
+</section>
