--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,14 +29,10 @@
     <address class="header-contacts d-none">
       <ul class="contacts-list">
         <li class="contacts-item">
-          <a class="contacts-link" href="tel:+380999091122"
-            >+38 (099) 909 11 22</a
-          >
+          <a class="contacts-link" href="tel:+380999091122">+38 (099) 909 11 22</a>
         </li>
         <li class="contacts-item">
-          <a class="contacts-link" href="#" type="emailto:" hello@ecotote.com
-            >hello@ecotote.com</a
-          >
+          <a class="contacts-link" href="#" type="emailto:" hello@ecotote.com>hello@ecotote.com</a>
         </li>
       </ul>
     </address>
@@ -89,16 +85,11 @@
       <address class="mobile-address">
         <ul class="mobile-address-list">
           <li class="mobile-address-item">
-            <a
-              href="tel:+380999091122"
-              class="mobile-address-link mobile-contact-link"
-              >+38 (099) 909 11 22</a
-            >
+            <a href="tel:+380999091122" class="mobile-address-link mobile-contact-link">+38 (099) 909 11
+              22</a>
           </li>
           <li class="mobile-address-item">
-            <a href="mailto:hello@ecotote.com" class="mobile-address-link"
-              >hello@ecotote.com</a
-            >
+            <a href="mailto:hello@ecotote.com" class="mobile-address-link">hello@ecotote.com</a>
           </li>
         </ul>
       </address>
