--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -26,7 +26,7 @@
               ../img/gallery/eco-tote-m.jpg    1x,
               ../img/gallery/eco-tote-m@2x.jpg 2x
             "
-            alt="Екологічна сумка EcoTotes"
+            alt="EcoTotes"
           />
         </picture>
       </li>
