--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -169,6 +169,13 @@
 
 }
 }
+
+@media screen and (min-width: 1440px) {
+    .strenght {
+        margin-bottom: 32px;
+    }
+}
+
 .subtitle-advantages {
     font-family: "Comfortaa", sans-serif;
     font-weight: 700;
