--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -97,7 +97,7 @@
 .list-section-advantages {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     gap: 48px;
     margin: 0 auto;
