MIssing gallery files

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,65 +1,114 @@
-<section class="gallery">
+<section class="gallery" id="gallery">
   <div class="container">
     <h2 class="gallery-title">Галерея зображень</h2>
     <p class="gallery-text">EcoTotes у повсякденному житті</p>
     <ul class="gallery-list">
-      <li class="gallery-item">
+      <li class="gallery-item gallery-item--1">
         <picture class="gallery-item-picture">
-          <source media="(min-width: 768px)" srcset="
-              /img/eco-tote-tablet.jpg    1x,
-              /img/eco-tote-tablet@x2.jpg 2x
-            " />
-          <source media="(min-width: 1440px)" srcset="
-              /img/eco-tote-desktop.jpg    1x,
-              /img/eco-tote-desktop@x2.jpg 2x
-            " />
-          <img src="/img/eco-tote-mobile.jpg" srcset="
-              /img/eco-tote-mobile.jpg    1x,
-              /img/eco-tote-mobile@x2.jpg 2x
-            " width="288" height="288" alt="Екологічна сумка EcoTotes" />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              /img/gallery/eco-tote-t.jpg    1x,
+              /img/gallery/eco-tote-t@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 1440px)"
+            srcset="
+              /img/gallery/eco-tote-d.jpg    1x,
+              /img/gallery/eco-tote-d@2x.jpg 2x
+            "
+          />
+          <img
+            class="list-photo photo--eco-tote"
+            src="/img/eco-tote-mobile.jpg"
+            srcset="
+              /img/gallery/eco-tote-m.jpg    1x,
+              /img/gallery/eco-tote-m@2x.jpg 2x
+            "
+            alt="Екологічна EcoTotes"
+          />
         </picture>
       </li>
-      <li class="gallery-item">
+      <li class="gallery-item gallery-item--2">
         <picture class="gallery-item-picture">
-          <source media="(min-width: 768px)" srcset="
-              /img/city-scene-tablet.jpg    1x,
-              /img/city-scene-tablet@x2.jpg 2x
-            " />
-          <source media="(min-width: 1440px)" srcset="
-              /img/city-scene-desktop.jpg    1x,
-              /img/city-scene-desktop@x2.jpg 2x
-            " />
-          <img src="/src/img/city-scene-mobile.jpg" srcset="
-              /img/city-scene-mobile.jpg    1x,
-              /img/city-scene-mobile@x2.jpg 2x
-            " width="288" height="288" alt="city-scene"/>
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              /img/gallery/city-scene-t.jpg    1x,
+              /img/gallery/city-scene-t@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 1440px)"
+            srcset="
+              /img/gallery/city-scene-d.jpg    1x,
+              /img/gallery/city-scene-d@2x.jpg 2x
+            "
+          />
+          <img
+            class="list-photo photo--city-scene"
+            src="/img/city-scene-mobile.jpg"
+            srcset="
+              /img/gallery/city-scene-m.jpg    1x,
+              /img/gallery/city-scene-m@2x.jpg 2x
+            "
+            alt="city-scene"
+          />
         </picture>
       </li>
-      <li class="gallery-item">
+      <li class="gallery-item gallery-item--3">
         <picture class="gallery-item-picture">
-          <source media="(min-width: 768px)" srcset="/img/walker-tablet.jpg 1x, /img/walker-tablet@x2.jpg 2x" />
-          <source media="(min-width: 1440px)" srcset="
-              /img/walker-desktop.jpg    1x,
-              /img/walker-desktop@x2.jpg 2x
-            " />
-          <img src="/img/walker-mobile.jpg" srcset="/img/walker-mobile.jpg 1x, /img/walker-mobile@x2.jpg 2x"
-            width="288" height="288" alt="walker with EcoTotes bag" />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              /img/gallery/walker-t.jpg    1x,
+              /img/gallery/walker-t@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 1440px)"
+            srcset="
+              /img/gallery/walker-d.jpg    1x,
+              /img/gallery/walker-d@2x.jpg 2x
+            "
+          />
+          <img
+            class="list-photo photo--walker"
+            src="/img/walker-mobile.jpg"
+            srcset="
+              /img/gallery/walker-m.jpg    1x,
+              /img/gallery/walker-m@2x.jpg 2x
+            "
+            alt="walker with EcoTotes"
+          />
         </picture>
       </li>
-      <li class="gallery-item">
+      <li class="gallery-item gallery-item--4">
         <picture class="gallery-item-picture">
-          <source media="(min-width: 768px)" srcset="
-              /img/young-woman-tablet.jpg    1x,
-              /img/young-woman-tablet@x2.jpg 2x
-            " />
-          <source media="(min-width: 1440px)" srcset="
-              /img/young-woman-desktop.jpg    1x,
-              /img/young-woman-desktop@x2.jpg 2x
-            " />
-          <img src="/img/young-woman-mobile.jpg" srcset="
-              /img/young-woman-mobile.jpg    1x,
-              /img/young-woman-mobile@x2.jpg 2x
-            " width="288" height="288" alt="young-woman with EcoTotes bag" />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              /img/gallery/young-woman-t.jpg    1x,
+              /img/gallery/young-woman-t@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 1440px)"
+            srcset="
+              /img/gallery/young-woman-d.jpg    1x,
+              /img/gallery/young-woman-d@2x.jpg 2x
+            "
+          />
+          <img
+            class="list-photo photo--young-woman"
+            src="/img/young-woman-mobile.jpg"
+            srcset="
+              /img/gallery/young-woman-m.jpg    1x,
+              /img/gallery/young-woman-m@2x.jpg 2x
+            "
+            alt="young-woman with EcoTotes"
+          />
         </picture>
       </li>
     </ul>
