--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -15,6 +15,7 @@
   max-width: 200px;
   margin-left: auto;
   margin-right: auto;
+  font-family: 'Comfortaa', sans-serif;
 }
 
 .gallery-text {
@@ -24,6 +25,7 @@
   text-align: center;
   color: #030a06;
   margin-bottom: 32px;
+  font-family: 'Comfortaa', sans-serif;
 }
 
 .gallery-list {
@@ -93,6 +95,26 @@
     order: 4;
     height: 338px;
   }
+
+  .photo--young-woman {
+    height: 338px;
+    object-fit: cover;
+  }
+
+  .photo--walker {
+    height: 700px;
+    object-fit: cover;
+  }
+
+  .photo--city-scene {
+    height: 700px;
+    object-fit: cover;
+  }
+
+  .photo--eco-tote {
+    height: 338px;
+    object-fit: cover;
+  }
 }
 
 @media (min-width: 1440px) {
@@ -113,6 +135,7 @@
     order: 1;
     height: 421px;
   }
+
   .gallery-item--3 {
     order: 4;
   }
