--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,23 +1,25 @@
 .about-container {
-    background-image: url(/img/about/about-mob-1x.jpg);
+    background-image: url(../img/about/about-mob-1x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     margin: 0 auto;
     width: 320px;
     height: 348px;
-    
+ 
 }
 @media (min-width: 320px) and (min-resolution: 192dpi) {
      .about-container {
-        background-image: url(/img/about/about-mob-2x.jpg);
+        background-image: url(../img/about/about-mob-2x.jpg);
     }
 }
 
 @media screen and (min-width: 768px) {
     .about-container {
-        background-image: url(/img/about/about-tab-1x.jpg);
-        
+        background-image: url(../img/about/about-tab-1x.jpg);
+        padding: 80px 32px;
+        width: 768px;
+        height: 325px
     }
     .about-title {
         padding-top: 84px;
@@ -32,22 +34,21 @@
         max-width: 573px;
         font-size: 18px;
     }
+    
 }
 @media (min-width: 768px) and (min-resolution: 192dpi) {
     .about-container {
-        background-image: url(/img/about/about-tab-2x.jpg);
+        background-image: url(../img/about/about-tab-2x.jpg);
     }
 }
 
 @media screen and (min-width: 1440px) {
     .about-container {
-        background-image: url(/img/about/about-desk-1x.jpg);
+        background-image: url(../img/about/about-desk-1x.jpg);
         width: 1440px;
         height: 462px;
     }
-    .about-title {
-        
-    }
+
     .about-subtitle {
         font-size: 56px;
         max-width: 620px;
@@ -61,7 +62,7 @@
 }
 @media (min-width: 1440px) and (min-resolution: 192dpi) {
     .about-container {
-        background-image: url(/img/about/about-desk-2x.jpg);
+        background-image: url(../img/about/about-desk-2x.jpg);
     }
 }
 
