update nav names

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -53,7 +53,7 @@
     <div class="mobile-menu-container">
       <div class="mob-logo">
         <a href="/index.html" class="logo-link">
-          <img src="/img/logo.svg" width="84" height="36" />
+          <img src="/img/logo.svg" alt="website logo" width="84" height="36" />
         </a>
       </div>
       <div class="mob-btn">
