update nav names

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,14 +34,14 @@
           >
         </li>
         <li class="contacts-item">
-          <a class="contacts-link" href="#" type="emailto:" hello@ecotote.com
+          <a class="contacts-link" href="#" type="emailto:hello@ecotote.com"
             >hello@ecotote.com</a
           >
         </li>
       </ul>
     </address>
 
-    <button type="submit" class="burger-btn" data-menu-open>
+    <button class="burger-btn" data-menu-open>
       <svg class="burger-icon" width="16" height="12">
         <use href="/img/svg/icons.svg#icon-menu"></use>
       </svg>
@@ -57,7 +57,7 @@
         </a>
       </div>
       <div class="mob-btn">
-        <button class="mobile-menu-close" type="button" data-menu-close>
+        <button class="mobile-menu-close" data-menu-close>
           <svg class="mobile-menu-svg" width="15" height="15">
             <use href="./img/svg/icons.svg#icon-close"></use>
           </svg>
