remove extra link

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,7 +34,7 @@
           >
         </li>
         <li class="contacts-item">
-          <a class="contacts-link" href="#" href="mailto:hello@ecotote.com"
+          <a class="contacts-link" href="mailto:hello@ecotote.com"
             >hello@ecotote.com</a
           >
         </li>
